--- a/app/globals.css
+++ b/app/globals.css
@@ -26,4 +26,6 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  min-height: 100vh;
+  overflow-y: scroll;
 }
