--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 @import url("http://fonts.googleapis.com/css?family=Lora:400|Ubuntu:300,700");
 
