--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@config "../tailwind.config.ts";
 
 @import url("http://fonts.googleapis.com/css?family=Lora:400|Ubuntu:300,700");
 
